@@ -2045,6 +2045,8 @@ static const LuaWrapper::FunctionReg dfhack_units_module[] = {
     WRAPM(Units, isMerchant),
     WRAPM(Units, isDiplomat),
     WRAPM(Units, isVisitor),
+    WRAPM(Units, isWildlife),
+    WRAPM(Units, isAgitated),
     WRAPM(Units, isInvader),
     WRAPM(Units, isUndead),
     WRAPM(Units, isNightCreature),
