@@ -190,7 +190,7 @@ DFhackCExport command_result plugin_onstatechange(color_ostream &out, state_chan
 }
 
 DFhackCExport command_result plugin_onupdate(color_ostream &out) {
-    if (is_enabled && world->frame_counter - cycle_timestamp >= CYCLE_TICKS) {
+    if (world->frame_counter - cycle_timestamp >= CYCLE_TICKS) {
         int32_t designated = do_cycle(out);
         if (0 < designated)
             out.print("autochop: designated %d tree(s) for chopping\n", designated);
