@@ -299,8 +299,6 @@ DFhackCExport command_result plugin_shutdown(color_ostream &out)
 
 DFhackCExport command_result plugin_onupdate(color_ostream &out)
 {
-    if (!enableUpdates)
-        return CR_OK;
     KeyUpdate();
     return CR_OK;
 }
