@@ -851,8 +851,7 @@ DFhackCExport command_result plugin_onstatechange(color_ostream &out, state_chan
 }
 
 DFhackCExport command_result plugin_onupdate(color_ostream &out) {
-    if (is_enabled &&
-       (cycle_needed || world->frame_counter - cycle_timestamp >= CYCLE_TICKS))
+    if (cycle_needed || world->frame_counter - cycle_timestamp >= CYCLE_TICKS)
         do_cycle(out);
     return CR_OK;
 }
