@@ -701,7 +701,7 @@ DFhackCExport command_result plugin_onstatechange(color_ostream &out, state_chan
 }
 
 DFhackCExport command_result plugin_onupdate(color_ostream &out) {
-    if (is_enabled && world->frame_counter - cycle_timestamp >= CYCLE_TICKS) {
+    if (world->frame_counter - cycle_timestamp >= CYCLE_TICKS) {
         int ordered = do_cycle(out);
         if (0 < ordered)
             out.print("tailor: ordered %d items of clothing\n", ordered);
